@@ -113,6 +113,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25718: Fixed copying object with state with boolean value is false.
+
 - Issue #10131: Fixed deep copying of minidom documents.  Based on patch
   by Marian Ganisin.
 
